# fastapi-auth-service

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  example.env  pyproject.toml
app/: crud.py  db.py  main.py  models.py  schemas.py  security.py  settings.py
app/alembic/: env.py
app/alembic/versions/: 5312c65f03f3_init.py  b3169ba90b4f_init.py
app/routers/: auth.py  roles.py  services.py  users.py
